1) Couple of new constants 2) RefreshData of ModestyTableViewController is now public 3) Implement StaffTableViewController

--- a/Modesty/Base.lproj/Main.storyboard
+++ b/Modesty/Base.lproj/Main.storyboard
@@ -65,6 +65,7 @@
                     <navigationItem key="navigationItem" title="Root View Controller" id="3n3-pD-Y1D"/>
                     <connections>
                         <segue destination="jjh-Xk-A6Y" kind="push" identifier="ShowPlugins" id="Cj5-Q1-1q2"/>
+                        <segue destination="VNn-FJ-6yY" kind="push" identifier="ShowStaff" id="ymX-43-LJG"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6uf-Rb-bdX" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -221,6 +222,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c16-GT-NqR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="539" y="480"/>
+        </scene>
+        <!--Staff Table View Controller - Players-->
+        <scene sceneID="HGT-dr-NoC">
+            <objects>
+                <tableViewController title="Players" id="VNn-FJ-6yY" customClass="StaffTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="OcY-1Q-6am">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ModestyCell" textLabel="eDY-Au-Fxs" detailTextLabel="2MD-u7-105" style="IBUITableViewCellStyleValue1" id="UAs-KY-ZhM">
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UAs-KY-ZhM" id="PNZ-xf-zEA">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eDY-Au-Fxs">
+                                            <rect key="frame" x="15" y="11" width="33" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2MD-u7-105">
+                                            <rect key="frame" x="261" y="11" width="44" height="21"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="nig-Nk-500"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4bq-5C-EtO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1869" y="426"/>
         </scene>
     </scenes>
     <resources>
