--- a/Modesty/Base.lproj/Main.storyboard
+++ b/Modesty/Base.lproj/Main.storyboard
@@ -27,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
-        <!--Info View Controller - Root View Controller-->
+        <!--Info Table View Controller - Root View Controller-->
         <scene sceneID="12t-Vc-g26">
             <objects>
-                <tableViewController id="dnk-bR-oxx" customClass="InfoViewController" sceneMemberID="viewController">
+                <tableViewController id="dnk-bR-oxx" customClass="InfoTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Dsb-le-LXy">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -120,10 +120,10 @@
             </objects>
             <point key="canvasLocation" x="539" y="-215"/>
         </scene>
-        <!--Players View Controller - Players-->
+        <!--Players Table View Controller - Players-->
         <scene sceneID="Q77-cW-g3O">
             <objects>
-                <tableViewController title="Players" id="3fs-KQ-7Vq" customClass="PlayersViewController" sceneMemberID="viewController">
+                <tableViewController title="Players" id="3fs-KQ-7Vq" customClass="PlayersTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="toF-G4-RO0">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
