--- a/Modesty/Base.lproj/Main.storyboard
+++ b/Modesty/Base.lproj/Main.storyboard
@@ -21,6 +21,7 @@
                         <segue destination="Azz-5h-fRf" kind="relationship" relationship="viewControllers" id="X01-4P-Hn1"/>
                         <segue destination="sCQ-Oc-rX0" kind="relationship" relationship="viewControllers" id="HXb-me-pdf"/>
                         <segue destination="TeJ-95-U0F" kind="relationship" relationship="viewControllers" id="Ua2-Fu-P97"/>
+                        <segue destination="NgH-uD-h2G" kind="relationship" relationship="viewControllers" id="LWX-Su-iHM"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
@@ -186,6 +187,65 @@
             </objects>
             <point key="canvasLocation" x="1078" y="1158"/>
         </scene>
+        <!--News Table View Controller - News-->
+        <scene sceneID="u31-da-CjB">
+            <objects>
+                <tableViewController id="pxH-2m-Geq" customClass="NewsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="wKl-pk-6yI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NewsCell" textLabel="d5y-WX-UwO" detailTextLabel="TW3-JV-Dbb" style="IBUITableViewCellStyleSubtitle" id="xZw-AL-dXL">
+                                <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xZw-AL-dXL" id="FBh-Pr-uL3">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d5y-WX-UwO">
+                                            <rect key="frame" x="15" y="3" width="34" height="22"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TW3-JV-Dbb">
+                                            <rect key="frame" x="15" y="25" width="43" height="15"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="News" id="GTj-6I-B7A"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pX7-6X-W8D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1064" y="1824"/>
+        </scene>
+        <!--Navigation Controller - News-->
+        <scene sceneID="Uqn-rr-7XT">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="NgH-uD-h2G" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" image="news" id="vwJ-Ho-ZHB"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="wSp-st-ccp">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="pxH-2m-Geq" kind="relationship" relationship="rootViewController" id="4QK-lN-0Zl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K39-cY-aI1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="1824"/>
+        </scene>
         <!--Navigation Controller - Social-->
         <scene sceneID="EAd-LY-H0E">
             <objects>
@@ -268,6 +328,7 @@
     <resources>
         <image name="group" width="25" height="25"/>
         <image name="info" width="25" height="25"/>
+        <image name="news" width="25" height="25"/>
         <image name="social_tabbar" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
