--- a/Modesty WatchKit App/Base.lproj/Interface.storyboard
+++ b/Modesty WatchKit App/Base.lproj/Interface.storyboard
@@ -1,55 +1,59 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="7703" systemVersion="14E11f" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fh3-PN-dn3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="3737"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
-        <scene sceneID="aou-V4-d1y">
+        <!--Modesty-->
+        <scene sceneID="tHR-Ft-ZZa">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Modesty_WatchKit_App" customModuleProvider="target">
+                <controller title="Modesty" id="fh3-PN-dn3" customClass="MainInterfaceController" customModule="Modesty_WatchKit_Extension">
                     <items>
-                        <group width="1" alignment="left" id="dRr-yX-E4q">
+                        <button width="1" alignment="left" verticalAlignment="center" title="Players" id="DIJ-Du-x2A">
+                            <connections>
+                                <segue destination="D38-Yv-Nd3" kind="push" id="Jo5-jQ-2Gl"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" verticalAlignment="center" title="Staff" id="wHU-Yu-8Yx">
+                            <connections>
+                                <segue destination="M3T-dj-krx" kind="push" id="CDl-Zb-Cwi"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="-119" y="328"/>
+        </scene>
+        <!--Staff-->
+        <scene sceneID="HLx-up-pLo">
+            <objects>
+                <controller title="Staff" id="M3T-dj-krx" customClass="StaffInterfaceController" customModule="Modesty_WatchKit_Extension">
+                    <items>
+                        <table alignment="left" id="Rct-Gk-dMY">
                             <items>
-                                <label alignment="left" text="Modesty" id="p4B-QM-NBg"/>
-                                <label width="67" alignment="right" text="Refreshing" textAlignment="right" minimumScaleFactor="0.20000000000000015" id="DBZ-MQ-DiG"/>
-                            </items>
-                        </group>
-                        <table alignment="left" id="ihR-4P-XqR">
-                            <items>
-                                <tableRow identifier="PlayerRow" id="UMK-7S-jDG" customClass="PlayerRowController" customModule="Modesty_WatchKit_Extension">
-                                    <group key="rootItem" width="1" height="40" alignment="left" id="GU3-9P-yl0">
+                                <tableRow identifier="PlayerRow" id="AQc-tX-tWm" customClass="PlayerRowController" customModule="Modesty_WatchKit_Extension">
+                                    <group key="rootItem" width="1" alignment="left" id="ifn-V5-7xT">
                                         <items>
-                                            <imageView width="40" alignment="left" verticalAlignment="center" contentMode="scaleAspectFit" id="5bP-N9-86A"/>
-                                            <label width="87" alignment="left" verticalAlignment="center" text="Label" textAlignment="center" minimumScaleFactor="0.20000000000000015" id="fwD-3X-rCJ"/>
+                                            <imageView width="40" alignment="left" verticalAlignment="center" contentMode="scaleAspectFit" id="QrY-Ph-TZK"/>
+                                            <label width="87" alignment="left" verticalAlignment="center" text="Label" textAlignment="center" minimumScaleFactor="0.20000000000000015" id="1Dk-1I-mUi"/>
                                         </items>
                                     </group>
                                     <connections>
-                                        <outlet property="playerImageView" destination="5bP-N9-86A" id="oYO-bv-2G9"/>
-                                        <outlet property="playerNameLabel" destination="fwD-3X-rCJ" id="oF1-BR-v0o"/>
-                                        <segue destination="Bwj-qn-rhR" kind="push" identifier="ShowPlayer" id="Yyc-Qt-A4N"/>
+                                        <outlet property="playerImageView" destination="QrY-Ph-TZK" id="sUz-AK-F9K"/>
+                                        <outlet property="playerNameLabel" destination="1Dk-1I-mUi" id="1Ei-wy-Qzr"/>
+                                        <segue destination="Bwj-qn-rhR" kind="push" id="pBz-07-ydr"/>
                                     </connections>
                                 </tableRow>
                             </items>
                         </table>
                     </items>
-                    <menu key="menu" id="Ei8-zV-13T">
-                        <items>
-                            <menuItem title="Refresh" icon="repeat" id="LmI-vb-8so">
-                                <connections>
-                                    <action selector="refreshMenu" destination="AgC-eL-Hgc" id="sre-Oq-7yX"/>
-                                </connections>
-                            </menuItem>
-                        </items>
-                    </menu>
                     <connections>
-                        <outlet property="playerCountLabel" destination="DBZ-MQ-DiG" id="qBx-f3-Hrl"/>
-                        <outlet property="playerTableView" destination="ihR-4P-XqR" id="N30-Ot-cL7"/>
+                        <outlet property="playerTableView" destination="Rct-Gk-dMY" id="Urg-E0-5Jf"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="164" y="217"/>
+            <point key="canvasLocation" x="281" y="648"/>
         </scene>
         <!--View Player Interface Controller-->
         <scene sceneID="6Kw-eu-F55">
@@ -67,7 +71,55 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="376" y="214.5"/>
+            <point key="canvasLocation" x="704" y="426"/>
+        </scene>
+        <!--Players-->
+        <scene sceneID="jVy-KX-4TP">
+            <objects>
+                <controller title="Players" id="D38-Yv-Nd3" customClass="PlayerInterfaceController" customModule="Modesty_WatchKit_Extension">
+                    <items>
+                        <group width="1" alignment="left" id="pWp-O6-gJ9">
+                            <items>
+                                <label width="67" alignment="right" text="Refreshing" textAlignment="right" minimumScaleFactor="0.20000000000000015" id="FlM-Jc-6ya"/>
+                            </items>
+                        </group>
+                        <table alignment="left" id="nzd-yJ-b0W">
+                            <items>
+                                <tableRow identifier="PlayerRow" id="hhb-M2-WOp" customClass="PlayerRowController" customModule="Modesty_WatchKit_Extension">
+                                    <group key="rootItem" width="1" height="40" alignment="left" id="nbF-Jc-bfv">
+                                        <items>
+                                            <imageView width="40" alignment="left" verticalAlignment="center" contentMode="scaleAspectFit" id="E1I-2Y-1eP"/>
+                                            <label width="87" alignment="left" verticalAlignment="center" text="Label" textAlignment="center" minimumScaleFactor="0.20000000000000015" id="ah5-z4-P8i"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="playerImageView" destination="E1I-2Y-1eP" id="aqH-BB-quQ"/>
+                                        <outlet property="playerNameLabel" destination="ah5-z4-P8i" id="tah-Im-pjN"/>
+                                        <segue destination="Bwj-qn-rhR" kind="push" id="9KX-5N-qBr"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <menu key="menu" id="eJ2-Bl-qz8">
+                        <items>
+                            <menuItem title="Refresh" icon="repeat" id="HNG-rK-cMi">
+                                <connections>
+                                    <action selector="refreshMenu" destination="D38-Yv-Nd3" id="RfN-Gm-r7P"/>
+                                </connections>
+                            </menuItem>
+                        </items>
+                    </menu>
+                    <connections>
+                        <outlet property="playerCountLabel" destination="FlM-Jc-6ya" id="7Cx-BJ-vMs"/>
+                        <outlet property="playerTableView" destination="nzd-yJ-b0W" id="yb0-bS-hm6"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="228" y="162"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="pBz-07-ydr"/>
+    </inferredMetricsTieBreakers>
 </document>
